--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.4.0"
-androidTools = "31.2.2"
+agp = "8.4.1"
+androidTools = "31.4.1"
 core = "1.10.3"
 playCore = "1.10.3"
 coreSplashscreen = "1.0.1"
@@ -8,7 +8,7 @@ coilCompose = "2.6.0"
 composeCompiler = "1.5.9"
 desugar_jdk_libs = "2.0.4"
 kotlin = "1.9.22"
-coreKtx = "1.12.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -17,20 +17,20 @@ ktor = "2.3.8"
 ktorClientLogging = "2.3.8"
 ktorServerCallLogging = "2.3.7"
 koin = "3.5.3"
-lifecycleRuntimeKtx = "2.8.0"
+lifecycleRuntimeKtx = "2.8.1"
 composeBom = "2024.05.00"
-materialIconsExtended = "1.6.3"
+materialIconsExtended = "1.6.7"
 navigationCompose = "2.7.7"
 securityCryptoKtx = "1.1.0-alpha06"
 timber = "5.0.1"
 ksp = "1.9.22-1.0.17"
 room = "2.6.1"
-appcompat = "1.6.1"
+appcompat = "1.7.0"
 material = "1.12.0"
 org-jetbrains-kotlin-jvm = "1.9.23"
 maps = "4.3.3"
 coroutines = "1.8.0"
-gmsLocation = "21.2.0"
+gmsLocation = "21.3.0"
 mapsUtils = "5.0.0"
 bson = "4.11.1"
 work = "2.9.0"
@@ -101,6 +101,13 @@ play-services-maps = { group = "com.google.android.gms", name = "play-services-m
 google-maps-android-utils-ktx = { module = "com.google.maps.android:maps-utils-ktx", version.ref = "mapsUtils"}
 annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
 
+# Gradle
+android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+android-tools-common = { group = "com.android.tools", name = "common", version.ref = "androidTools" }
+kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
+room-gradlePlugin = { group = "androidx.room", name = "room-gradle-plugin", version.ref = "room" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
@@ -111,6 +118,8 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 room = { id = "androidx.room", version.ref = "room" }
 androidDynamicFeature = { id = "com.android.dynamic-feature", version.ref = "agp" }
 mapsplatform-secrets-plugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsPlugin"}
+runnerapp-android-application-plugin = { id = "runnerapp.android.application", version = "unspecified" }
+
 
 [bundles]
 compose = [
